@@ -1,6 +1,7 @@
 ------ current release ---------------------------
 
 1.0.0 (<date>) <sha1>
+ + Supports regular expressions and text strings.
  + Supports multiple rulesets in different sections of ~/.clogrc.
  + Supports adding date- or time-stamps to each line.
  + Supports colorizing lines or patterns.
